<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ECD9D8"
    tools:context=".AddActivity">

    <TextView
        android:id="@+id/adTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/insert_record"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/adIdEditTextID"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_student_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:backgroundTint="#324550"/>
    <EditText
        android:id="@+id/adNameEditTextID"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_student_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:backgroundTint="#324550"/>

    <EditText
        android:id="@+id/adAgeEditTextID"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:inputType="number"
        android:backgroundTint="#324550"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_gender"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:backgroundTint="#324550"/>

    <RadioGroup
        android:id="@+id/adRadioGroupID"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>

    </RadioGroup>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose_section"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:backgroundTint="#324550"/>

    <Spinner
        android:id="@+id/adSpinnerID"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="wrap_content"
        android:paddingVertical="10dp"
        android:paddingEnd="10dp"
        android:layout_height="48dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF7043"
        android:text="@string/store_data"
        android:onClick="storeData"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF7043"
        android:text="@string/return_to_main_menu"
        android:onClick="mainMenu"
        tools:ignore="OnClick,UsingOnClickInXml" />

</LinearLayout>