<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#324550"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/coiny"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/lgUserLoginEmailID"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/enter_your_email"
        android:background="@drawable/et_background"
        android:padding="15dp"
        android:textColorHint="#DFD9D9"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/lgUserLoginPasswordID"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/enter_password"
        android:background="@drawable/et_background"
        android:padding="15dp"
        android:inputType="textPassword"
        android:textColorHint="#DFD9D9"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/white"/>


    <Button
        android:id="@+id/lgLoginBtnID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_background"
        android:paddingHorizontal="50dp"
        android:paddingVertical="15dp"
        android:textColor="@color/white"
        android:onClick="login"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/lgRegisterTxtID"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_for_an_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:onClick="registerPage"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <ProgressBar
        android:id="@+id/lgLoginProgressBarID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="invisible" />


</LinearLayout>