<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ECD9D8"
    tools:context=".DeleteActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/delete_record"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dtIDEditTextID"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_student_id_to_be_deleted"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:backgroundTint="#324550"/>

    <Button
        android:id="@+id/dtDeleteButtonID"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF7043"
        android:text="@string/remove_data"
        android:onClick="delete"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/dtMMButtonID"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF7043"
        android:text="@string/return_to_main_menu"
        android:onClick="mainMenu"
        tools:ignore="OnClick,UsingOnClickInXml" />

</LinearLayout>