<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#324550"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/book"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/coiny"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_record_keeping_app"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="italic"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_app"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_background"
        android:paddingHorizontal="50dp"
        android:paddingVertical="15dp"
        android:textColor="@color/white"
        android:onClick="startApp"
        tools:ignore="UsingOnClickInXml" />


</LinearLayout>