<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#324550"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/mnTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/coiny"
        android:text="@string/main_menu"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="30dp">

            <ImageView
                android:id="@+id/mnImageView1ID"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/add"
                android:onClick="beginProcess"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_student"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="30dp">

            <ImageView
                android:id="@+id/mnImageView2ID"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/remove"
                android:onClick="beginProcess"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_student"
                android:textColor="@color/white"
                android:onClick="beginProcess"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="30dp">

            <ImageView
                android:id="@+id/mnImageView3ID"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/view"
                android:onClick="beginProcess"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_record"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="30dp">

            <ImageView
                android:id="@+id/mnImageView4ID"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/update"
                android:onClick="beginProcess"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_record"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>