<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ECD9D8"
    tools:context=".FindActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/search_record"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fdSearchEditTextID"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_by_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:backgroundTint="#324550"/>

    <Button
        android:id="@+id/fdSubmitButtonID"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF7043"
        android:text="@string/submit"
        android:onClick="submit"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF7043"
        android:text="@string/return_to_main_menu"
        android:onClick="mainMenu"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <fragment
        android:id="@+id/fdFragmentloadid"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:name="com.example.infotrack.BlankFragment"/>

    <ProgressBar
        android:id="@+id/fdProgressBarID"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/fdTextView1ID"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:fontFamily="@font/archivo_black"
        android:gravity="center"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:id="@+id/fdTextView2ID"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:fontFamily="@font/archivo_black"
        android:gravity="center"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/fdTextView3ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/archivo_black"
        android:gravity="center"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/fdTextView4ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/archivo_black"
        android:gravity="center"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>